# BACKend

./: .env.example  pyproject.toml  test_api.py
app/: main.py
app/core/: config.py  security.py
app/routers/: devices.py  inference.py  telemetry.py  users.py
app/schemas/: device.py  inference.py  telemetry.py
app/utils/: inference.py  scoring.py  storage.py
